# Wanda-Vision

./: .gitignore  ADrawable_8hpp.html  ADrawable_8hpp__dep__incl.map  ADrawable_8hpp__dep__incl.md5  ADrawable_8hpp__incl.map  ADrawable_8hpp__incl.md5  ADrawable_8hpp_source.html  CMakeLists.txt  CMakeLists_8txt.html  Circle_8hpp.html  Circle_8hpp__dep__incl.map  Circle_8hpp__dep__incl.md5  Circle_8hpp__incl.map  Circle_8hpp__incl.md5  Circle_8hpp_source.html  Doxyfile  Event_8hpp.html  Event_8hpp__dep__incl.map  Event_8hpp__dep__incl.md5  Event_8hpp_source.html  IDisplayModule_8hpp.html  IDisplayModule_8hpp__dep__incl.map  IDisplayModule_8hpp__dep__incl.md5  IDisplayModule_8hpp__incl.map  IDisplayModule_8hpp__incl.md5  IDisplayModule_8hpp_source.html  IGameModule_8hpp.html  IGameModule_8hpp__dep__incl.map  IGameModule_8hpp__dep__incl.md5  IGameModule_8hpp__incl.map  IGameModule_8hpp__incl.md5  IGameModule_8hpp_source.html  InvalidArgumentException_8hpp.html  InvalidArgumentException_8hpp__dep__incl.map  InvalidArgumentException_8hpp__incl.map  InvalidArgumentException_8hpp_source.html  InvalidLibraryException_8hpp.html  InvalidLibraryException_8hpp__dep__incl.map  InvalidLibraryException_8hpp__dep__incl.md5  InvalidLibraryException_8hpp__incl.map  (+485 more)
.github/workflows/: build.yml  build_arcade.yml  build_arcade_ncurses.yml  build_arcade_pacman.yml  build_arcade_sdl2.yml  build_arcade_sfml.yml  doc.yml  tests.yml
docs/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeLists_8txt.html  CircleObject_8hpp.html  CircleObject_8hpp__dep__incl.map  CircleObject_8hpp__dep__incl.md5  CircleObject_8hpp__incl.map  CircleObject_8hpp__incl.md5  CircleObject_8hpp_source.html  ClickEvent_8hpp.html  ClickEvent_8hpp__dep__incl.map  ClickEvent_8hpp__dep__incl.md5  ClickEvent_8hpp__incl.map  ClickEvent_8hpp__incl.md5  ClickEvent_8hpp_source.html  CloseEvent_8hpp.html  CloseEvent_8hpp__dep__incl.map  CloseEvent_8hpp__dep__incl.md5  CloseEvent_8hpp__incl.map  CloseEvent_8hpp__incl.md5  CloseEvent_8hpp_source.html  Event_8hpp.html  Event_8hpp__dep__incl.map  Event_8hpp__dep__incl.md5  Event_8hpp_source.html  GameObject_8hpp.html  GameObject_8hpp__dep__incl.map  GameObject_8hpp__dep__incl.md5  GameObject_8hpp_source.html  IDisplayModule_8hpp.html  IDisplayModule_8hpp__dep__incl.map  IDisplayModule_8hpp__dep__incl.md5  IDisplayModule_8hpp__incl.map  IDisplayModule_8hpp__incl.md5  IDisplayModule_8hpp_source.html  IGameModule_8hpp.html  IGameModule_8hpp__dep__incl.map  IGameModule_8hpp__dep__incl.md5  IGameModule_8hpp__incl.map  (+238 more)
docs/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  CMakeCache_8txt.tex  CircleObject_8hpp.tex  CircleObject_8hpp__dep__incl.md5  CircleObject_8hpp__incl.md5  ClickEvent_8hpp.tex  ClickEvent_8hpp__dep__incl.md5  ClickEvent_8hpp__incl.md5  CloseEvent_8hpp.tex  CloseEvent_8hpp__dep__incl.md5  CloseEvent_8hpp__incl.md5  Event_8hpp.tex  Event_8hpp__dep__incl.md5  GameObject_8hpp.tex  GameObject_8hpp__dep__incl.md5  IDisplayModule_8hpp.tex  IDisplayModule_8hpp__dep__incl.md5  IDisplayModule_8hpp__incl.md5  IGameModule_8hpp.tex  IGameModule_8hpp__dep__incl.md5  IGameModule_8hpp__incl.md5  InvalidArgumentException_8hpp.tex  InvalidLibraryException_8hpp.tex  InvalidLibraryException_8hpp__dep__incl.md5  InvalidLibraryException_8hpp__incl.md5  KeyEvent_8hpp.tex  KeyEvent_8hpp__dep__incl.md5  KeyEvent_8hpp__incl.md5  Library_8cpp.tex  Library_8cpp__incl.md5  Library_8hpp__dep__incl.md5  Library_8hpp__incl.md5  LineObject_8hpp.tex  LineObject_8hpp__dep__incl.md5  LineObject_8hpp__incl.md5  ModInfo_8hpp.tex  ModInfo_8hpp__dep__incl.md5  ModInfo_8hpp__incl.md5  Module_8hpp.tex  (+96 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+66 more)
docs/source/: abc.rst  conf.py  exemples.rst  gameLibraries.rst  glossaryTerms.rst  graphicLibraries.rst  index.rst  tutoCreateDisplay.rst  tutoCreateGame.rst
latex/: ADrawable_8hpp.tex  ADrawable_8hpp__dep__incl.md5  ADrawable_8hpp__incl.md5  CMakeLists_8txt.tex  Circle_8hpp.tex  Circle_8hpp__dep__incl.md5  Circle_8hpp__incl.md5  Event_8hpp.tex  Event_8hpp__dep__incl.md5  IDisplayModule_8hpp.tex  IDisplayModule_8hpp__dep__incl.md5  IDisplayModule_8hpp__incl.md5  IGameModule_8hpp.tex  IGameModule_8hpp__dep__incl.md5  IGameModule_8hpp__incl.md5  InvalidArgumentException_8hpp.tex  InvalidArgumentException_8hpp__dep__incl.md5  InvalidArgumentException_8hpp__incl.md5  InvalidLibraryException_8hpp.tex  InvalidLibraryException_8hpp__dep__incl.md5  KeyBoardEvent_8hpp.tex  KeyBoardEvent_8hpp__dep__incl.md5  KeyBoardEvent_8hpp__incl.md5  Library_8hpp.tex  Library_8hpp__dep__incl.md5  Line_8hpp.tex  Line_8hpp__dep__incl.md5  Line_8hpp__incl.md5  Menu_8cpp.tex  Menu_8cpp__incl.md5  Menu_8hpp.tex  Menu_8hpp__dep__incl.md5  Menu_8hpp__incl.md5  ModInfo_8hpp.tex  ModInfo_8hpp__dep__incl.md5  Module_8hpp.tex  Module_8hpp__dep__incl.md5  Module_8hpp__incl.md5  MouseClickEvent_8hpp.tex  MouseClickEvent_8hpp__dep__incl.md5  (+178 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+80 more)
sources/: GameObject.hpp  IDisplayLibrary.hpp  IDisplayModule.hpp  IGameLibrary.hpp  IGameModule.hpp  LibInfo.hpp  Module.hpp  main.cpp
sources/Common/: ADrawable.hpp  Event.hpp  GameObject.hpp  (+5 more)
tests/: Library.cpp
(+48 files in other folders)
